Menambahkan Tabel LicenseSenjata
